--- a/css/styles.css
+++ b/css/styles.css
@@ -57,11 +57,36 @@
     font-weight: bold;
 }
 
+.msg-container {
+    background-color: #000;
+    padding: 15px;
+}
+
+.msg {
+    width: 60%;
+    margin: 0 auto;
+    padding: 10px;
+    border: solid 1px #000;
+    text-align: center;
+}
+
+.msg.error {
+    color: #842029;
+    background-color: #F8D7DA;
+    border-color: #F5C2C7;
+}
+
+.msg.success {
+    color: #0F5132;
+    background-color: #D1E7DD;
+    border-color: #BADBCC;
+}
+
 /* Home */
 #main-container {
     background-color: #000;
     color: #FFF;
-    min-height: 65vh;
+    min-height: 85vh;
     padding: 40px;
 }
 
