--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,41 @@
     padding: 40px;
 }
 
+/* Login / Register */
+#auth-row {
+    justify-content: space-evenly;
+}
+
+#login-container h2,
+#register-container h2 {
+    text-align: center;
+    border-bottom: 2px solid #F5C518;
+    width: 200px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+#login-container form,
+#register-container form {
+    max-width: 400px;
+    margin: 30px auto;    
+
+}
+
+.card-btn {
+    color: #000;
+    background-color: #F5C518;
+    border: 2px solid #F5C518;
+    width: 100%;
+}
+
+.card-btn:hover {
+    background-color: transparent;
+    color: #F5C518;
+    border-color: #F5C518;
+}
+
+
 /* Footer */
 
 #footer {
@@ -136,4 +171,12 @@
 
 #footer-links-container {
     margin: 30px 0;
+}
+
+label {
+    margin-bottom: 10px;
+}
+
+input {
+    margin-bottom: 20px;
 }
