--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,8 @@
     margin-top: 30px;
 }
 
-.edit-profile-page .card-btn{
+.edit-profile-page .card-btn,
+#add-movie-container .card-btn {
     width: auto;
 }
 
