--- a/css/styles.css
+++ b/css/styles.css
@@ -421,7 +421,15 @@
     text-decoration: none;
 }
 
+/* Search */
+#search-title {
+    font-size: 40px;
+}
 
+#search-result,
+.back-link {
+    color: #F5C518;
+}
 
 /* Footer */
 
